--- a/styles.css
+++ b/styles.css
@@ -42,28 +42,33 @@ body {
     cursor: pointer;
 }
 
+.hero-caption {
+    margin-top: 150px;
+}
+
 .skills {
     color: #828282;
 }
 
-.skills-header {
+.header {
     font-size: 28px;
     font-weight: 700;
     margin-bottom: 10px;
     margin-top: 40px;
 }
 
-.skills-sub-header {
+.sub-header {
     font-size: 16px;
     font-weight: 700;
 }
 
-.skills-section {
+.section {
     margin-top:60px;
 }
 
-.skills-text {
+.text {
     font-size: 14px;
+    text-align: center;
 }
 
 .skills-image {
@@ -71,4 +76,44 @@ body {
     max-height: 150px;
     margin-right: 40px;
     margin-left: 40px;
+}
+
+.contact {
+    color: white;
+}
+
+.contact-input {
+    border: 4px solid #fff;
+    width: 400px;
+    background: #62c87a;
+}
+
+.contact-submit {
+    text-align: center;
+}
+
+.contact-input::-webkit-input-placeholder {
+    color: white;
+}
+
+.btn.outline {
+    margin-top: 10px;
+	background: none;
+	padding: 10px 22px;
+}
+
+.btn-primary.outline {
+	border: 3px solid #fff;
+	color: #fff;
+}
+
+.btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
+    color: #62c87a;
+    background: #fff;
+	border-color: #fff;
+}
+.btn-primary.outline:active, .btn-primary.outline.active {
+	border-color: #62c87a;
+	color: #fff;
+	box-shadow: none;
 }
