--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,6 @@ body {
     margin-right: 20px;
 }
 
-.main-paragraph {
-    text-align: center;
-    font-size: 14px;
-}
-
 .image {
     border-radius: 50%;
     width: 312px;
@@ -116,4 +111,74 @@ body {
 	border-color: #62c87a;
 	color: #fff;
 	box-shadow: none;
+}
+
+/* Gallery Opacity */
+.hover12 figure {
+	background: #000;
+}
+.hover12 figure img {
+	opacity: 1;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover12 figure:hover img {
+	opacity: .5;
+}
+
+
+.column {
+	margin: 15px 15px 0;
+	padding: 0px 0px 0px 30px;
+}
+
+.column:last-child {
+	padding-bottom: 60px;
+}
+.column::after {
+	content: '';
+	clear: both;
+	display: block;
+}
+.column div {
+	position: relative;
+	/* float: left; */
+	width: 300px;
+	height: 200px;
+	margin: 0 0 0 10px;
+	padding: 0;
+}
+.column div:first-child {
+	margin-left: 0;
+}
+.column div span {
+	position: relative;
+	bottom: 120px;
+	left: 0;
+	z-index: 5;
+	display: block;
+	width: 300px;
+	margin: 0;
+	padding: 0;
+	color: #fff;
+	font-size: 16px;
+	text-decoration: none;
+	text-align: center;
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+	opacity: 0;
+}
+
+figure {
+	width: 300px;
+	height: 200px;
+	margin: 0;
+	padding: 0;
+	background: #fff;
+	overflow: hidden;
+}
+
+figure:hover+span {
+	/* bottom: -36px; */
+	opacity: 1;
 }
